--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "justMyCode": true,
-            "args": ["-f", "${workspaceFolder}/day10/cathode-ray_tube/input/example.txt"]
+            "args": ["-e", "1"]
         }
     ]
 }
